# xeno-pre-test

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cpa_first/: __init__.py  problem_intent.py  subjects.py
cpa_first/api/: __init__.py  main.py
cpa_first/benchmark/: __init__.py  runner.py
cpa_first/cli/: export_rules.py  validate.py
cpa_first/engine/: __init__.py  aggregate.py  prescribe.py  problem_diagnosis.py
cpa_first/eval_gen/: __init__.py  _anthropic_invoke.py  _json_extract.py  generator.py  validator.py  writer.py
data/: source_registry.yaml
docs/: 01-prd-cpa-first.md  02-data-strategy.md  03-success-story-and-interview-system.md  04-strategy-engine.md  05-problem-solving-intelligence.md  06-data-warehouse-and-pipeline.md  07-implementation-plan.md  08-cpa-cta-full-scope-data-program.md  09-past-exam-and-explanation-assets.md  10-subject-tutorials-and-solution-paths.md  11-ai-solver-and-benchmark.md  12-problem-solution-maps.md  13-attempt-diagnosis.md
prototype/: app.js  index.html  problem_solution_maps.json  styles.css  subject_tutorials.json
scripts/: _seed_terms_phase2.py  _seed_terms_phase4_expand.py  _seed_terms_phase5_to_500.py  _seed_terms_phase6_to_1000.py  build_term_graph.py  cpa_data_pipeline.py  generate_eval_set.py
tests/: test_aggregate.py  test_api.py  test_benchmark.py  test_engine.py  test_eval_gen.py  test_pipeline.py  test_problem_diagnosis.py  test_problem_intent.py  test_rag.py  test_solver.py  test_subjects.py  test_term_api.py  test_term_graph.py  test_term_index.py  test_validate.py
(+1305 files in other folders)
